Stop word-wrapping in inline code snippets

--- a/_includes/inline-styles.css
+++ b/_includes/inline-styles.css
@@ -501,6 +501,7 @@ code.highlighter-rouge {
   border-radius: 2px;
   padding: 0 3px;
   background-color: rgba(0,0,0,0.05);
+  white-space: nowrap;
 }
 div.highlighter-rouge > .highlight {
   padding: 0;
